# embassy

embassy-executor/src/raw/: mod.rs  run_queue_atomics.rs  run_queue_critical_section.rs
embassy-stm32/: Cargo.toml  build.rs
embassy-stm32/src/: lib.rs  low_power.rs  time_driver.rs  usb.rs
embassy-stm32/src/adc/: v1.rs
embassy-stm32/src/dac/: mod.rs
embassy-stm32/src/rcc/: mod.rs
embassy-stm32/src/rtc/: mod.rs
examples/stm32l5/: Cargo.toml
examples/stm32l5/.cargo/: config.toml
